<resources>
    <string name="app_name">HelloWorid</string>
    <string name="name">请输入用户名</string>
    <string name="pss">请输入密码</string>
    <string name="hello">你好世界</string>
    <string name="mz">支付宝</string>
    <string name="taobao">淘宝账号登录</string>
    <string name="wangji">忘记密码</string>

    <string name="logo" />
    <string name="button">登录</string>
    <string name="swit">接受消息推送</string>
    <string name="nicheng">昵称</string>
    <string name="cb">同意本软件的用户协议和隐私政策</string>
    <string name="zhuce">注册</string>
    <string name="duer">确认密码</string>
    <string name="shouji">手机号/邮箱</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="tp" />
    <string name="a">%</string>
    <string name="b">√</string>
    <string name="c">C</string>
    <string name="d">DEL</string>
    <string name="e">7</string>
    <string name="e1">8</string>
    <string name="e2">9</string>
    <string name="e3">—</string>
    <string name="e4">4</string>
    <string name="e5">5</string>
    <string name="e6">6</string>
    <string name="e7">7</string>
    <string name="e8">+</string>
    <string name="a1">1</string>
    <string name="a2">2</string>
    <string name="a3">3</string>
    <string name="a4">÷</string>
    <string name="a5">0</string>
    <string name="a6">.</string>
    <string name="a7">=</string>
    <string name="a8">×</string>
    <string name="textviews">计算区域</string>
    <string name="nine_tail_fox">九尾妖狐</string>
    <string name="ali">阿狸</string>
    <string name="magic">法师</string>
    <string name="assassin">刺客</string>
    <string name="ad">物理攻击</string>
    <string name="ap">法术攻击</string>
    <string name="defense">防御能力</string>
    <string name="difficulty">上手难度</string>
    <string name="kda">K/DA阿狸</string>
    <string name="button_left">左边</string>
    <string name="button_right">右边</string>
    <string name="button_ok">确定</string>
    <string name="button_switch">开关</string>
    <string name="radio_android">Android</string>
    <string name="edit_number">输入数值</string>
    <string name="radi_apple">Apple</string>
    <string name="java">Java</string>
    <string name="sql">SQL</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="Andriod">android</string>
    <string name="andriod">Android</string>
    <string name="appraise">星评价</string>
    <string name="okno">请先输入数值再点确认！</string>
    <string name="nihao">您好，欢迎使用</string>
    <string name="phone">手机号码</string>
    <string name="sex">性别</string>
    <string name="sms">是否接受推送</string>
    <string name="Authentication">身份信息验证</string>
    <string name="a_name">请输入您账号的昵称</string>
    <string name="a_shouji">请输入手机号码</string>
    <string name="new_pwd" >请输入新密码</string>
    <string name="reset_pwd">重置密码</string>
</resources>
